--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <span class="close-btn" onclick="closePopup()">X</span>
         <img id="chibi2" src="imagnes/chibi.gif">
         <p id="Bienvenidos">Bienvenidos</p>
-        <a id="link" href="https://www.ejemplo.com"> --> Mi Instagram</a>
+        <a id="link" href="https://www.instagram.com/paulo.tp/"> --> Mi Instagram</a>
         
     </div>
    
